metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
/* ... */
   /**----------------------------------------**/
      
    .entityDetails{
    	border: 1px solid #1C6E84;
    }
    
    .entityDetails h4{
    	color: #1C6E84;
    }
    
    .controls-well img{
		max-width: 90%;
		max-height: 900px;
		margin: 0 auto;
		display: block;
	}
	
    .georegion-map{
    	margin: 0px 180px;
    	display: block;
    }
	
	
	/** Metadata rendering via the Index **/
	#metadata-index-details {
		padding: 2%;
		width: 96%;
	}
	
	#metadata-index-details .controls-well .controls-well{
		margin-left: 0px;
	}
	
	#metadata-index-details .controls-well .control-label{
		display: none;
	}
	
	#metadata-index-details .controls-well > .control-group{
		margin-bottom: 5px;
	}
	
	.download-this-package{
		display: none;
	}
	/**----------------------------------------**/
	
	
	/** Gutter/Annotation/Sidr ****/
	#gutter .comment{
		float: left;
		width: 100px;
		margin-left: 5px;
		cursor: pointer;
	}
	#gutter .icon{
		float: left;
	}
    /**----------------------------------------**/

    
/* Registry CSS
-------------------------------------------------- */

    
    label.inline {
    	width: 40%;
    }
    
    /* Larger modal for guide content */
    .modal.large {
    	width: 80%;
    	margin-left: -40%;
    }
    
	/* Inherit for these registry labels */
	.label {
	  display: inherit;
	  padding: inherit;
	  font: inherit;
	  line-height: inherit;
	  color: inherit;
	  white-space: inherit;
	  vertical-align: inherit;
	  background-color: inherit;
	  -webkit-border-radius: inherit;
	     -moz-border-radius: inherit;
	          border-radius: inherit;
	}  
	
/* Combobox styles, overlay text input on select
<!-- example here -->
<div class="select-editable">
  <select onchange="this.nextElementSibling.value=this.value">
    <option value=""></option>
    <option value="sample">sample</option>
  </select>
  <input type="text" name="keyword" value=""/>
</div>
-------------------------------------------------- */     
	.select-editable {
		position: relative; 
		height: 45x; 
	}
	.select-editable select { 
		position:absolute; 
		top: 0px; 
		left: 0px; 
		width: 220px; 
		height: 29px;
	}
	.select-editable input {
		position:absolute; 
		top: 0px;
		left: 0px; 
		width: 193px; 
		padding: 1px;
		padding-left: 5px;
		height: 25px;
	}
	.select-editable select:focus, 
	.select-editable input:focus { 
		outline:none; 
	}	  
	
	.minimize > i,
	.result-header-count .minimize{
		display: none;
	}

  /* SIDEBAR CSS
  -------------------------------------------------- */
    
    #sidebar{
		padding: 0px 10px;
		width: 200px;
		height: 700px;
		float: left;
		clear: left;
		overflow-x: hidden;
		overflow-y: scroll;
 		background-color: #FFF;
    }
    
    .subset-choice{
    background-color: rgba(23, 97, 146, 0.46);
	color: white;
	font-size: 20px;
	font-family: "Oswald";
	padding: 2px 0px 0px 30%;
	position: relative;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	}
	
	.subset-choice:hover,
	.subset-choice:hover > i{
		color: #1C6E84;
	}
	
	.subset-choice > i{
		position:absolute;
		right: 0;
		margin-right: 10px;
		top: 20%;
	}
    
    /***Filters ***/
    
    .filter-contain{
   	  border-bottom: 1px solid #DDD;
   	  padding: 10px 0px;
   	  width: 100%;
   }
   .filter-contain > i{
   		color: #888;
   		font-size: 17px;
   		float: left;
   		margin: 0px;
   }
   
   .filter-contain label i{
   		font-size: 15px;
   		margin-left: 3px;
		top: 2px;	
		position: relative;
   }
    
    .filter-contain i.more-info{
    	font-size: 14px;
    	line-height: 23px;
    	top: 5px;
    	float: left;
    }
    
    .filter-contain > label{
    	float: left;
    	font-size: 13px;
    	font-weight: bold;
    	color: #666;
    	margin-left: 5px;    	
    }
    
    #filters-header{
    	padding: 0px;
    	margin-bottom: 0px;
    }
    
    .filter-input-contain{
    	clear: both;
    }
    
    .filter-input-contain input.filter{
    	width: 77%;
    	margin-left: 3px;
    }
    	
    /*-- Search buttons next to text inputs --*/
    .filter.btn{
    	border-radius: 0px;
    	-moz-border-radius: 0px;
    	-webkit-border-radius: 0px;
    	border-top-right-radius: 4px;
		border-bottom-right-radius: 4px;
		-webkit-border-top-right-radius: 4px;
		-webkit-border-bottom-right-radius: 4px;
		-moz-border-top-right-radius: 4px;
		-moz-border-bottom-right-radius: 4px;
    	height: 30px;
    	padding: 0px 7px;
    	display: inline-block;
    }
    
    /*-- Inputs for search filters --*/
    input.filter{
    	border-radius: 4px;
    	-webkit-border-radius: 4px;
    	-moz-border-radius: 4px;
    	border-top-right-radius: 0px;
		border-bottom-right-radius: 0px;
    	-webkit-border-top-right-radius: 0px;
		-webkit-border-bottom-right-radius: 0px;
    	-moz-border-top-right-radius: 0px;
		-moz-border-bottom-right-radius: 0px;
    	margin-left: 10px;
    	-moz-box-shadow: inset 0 0 10px -1px #CCC;
		-webkit-box-shadow: inset 0 0 10px -1px #CCC;
		box-shadow: inset 0 0 10px -1px #CCC;
		color: #555;
    }
    
    .filter-contain.no-border{
    	border-width: 0px;
    }
    
    #all_input{
    	width: 135px;
    	width: calc(100% - 30px - 10px);
    	margin-left: 0px;
    }
    
    input.filter::-webkit-input-placeholder{
		color: #999;
		font-weight: normal;
		text-shadow: none;
	}
	input.filter:-moz-placeholder{ /* Firefox 19+ */
		color: #999;
		font-weight: normal;
		text-shadow: none;
	}
	input.filter::-moz-placeholder{ /* Firefox 18- */
		color: #333;
		font-weight: normal;
		text-shadow: none;
	}
	input.filter:-ms-input-placeholder{
		color: #999;
		font-weight: normal;
		text-shadow: none;
	}

	/*-- The filter checkboxes --*/
	#filter-year input[type="checkbox"],
    #includes-files input[type="checkbox"]{
    	display: none;
    }
    #includes-files label{
    	font-size: 13px;
    	margin-right: 8px;
    }
    ul.checkbox-list{
    	list-style: none;
    }
    .checkbox-list > li > input{
    	float: left;
    	margin-right: 10px;
    	margin-left: 3px;
    }
/* ... */

